# mnemlet

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  engram.toml.example  memoria.toml.example  mnemlet.toml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
benchmarks/public/: synthetic_memory_cases.json  synthetic_quality_scenarios.json
docs/: INTELLIGENT_EXTRACTION.md  impressum.html  index.html
docs/designs/: 2026-05-22-competitive-analysis.md  2026-05-22-memory-intelligence-core-v0.2.md
docs/superpowers/notes/: 2026-05-24-v0.2-readiness-assessment.md  2026-05-25-codex-start-prompt.md  2026-05-25-p2-polish-session-handoff.md
docs/superpowers/plans/: 2026-05-19-mnemlet-openwebui-opencode-integration.md  2026-05-21-mnemlet-benchmark-reporting.md  2026-05-22-mnemlet-memory-intelligence-core.md  2026-05-24-v0.2-push-readiness-p1.md  2026-05-24-v0.2-push-readiness.md  2026-05-24-v0.2-quality-hardening.md  2026-05-25-v0.2-p2-polish.md  2026-05-26-v0.3-trust-security-privacy-implementation.md  2026-05-28-v0.4-intelligent-memory-extraction.md
docs/superpowers/specs/: 2026-05-19-mnemlet-openwebui-opencode-integration-design.md  2026-05-21-mnemlet-benchmark-reporting-design.md  2026-05-22-mnemlet-memory-intelligence-core-design.md  2026-05-22-openwebui-test-strategy-design.md  2026-05-22-quality-benchmark-design.md  2026-05-22-trust-security-privacy-layer-design.md  2026-05-24-v0.2-quality-hardening-design.md  2026-05-26-v0.3-publication-trust-security-privacy-design.md
docs/website/: datenschutz.html
scripts/: demo.cast  demo.sh
src/engram/: __init__.py  __main__.py  config.py  constants.py
src/engram/client/: __init__.py  client.py
src/engram/engine/: __init__.py  decay.py  ingest.py  recall.py  sleep.py
src/engram/server/: __init__.py  app.py  mcp_server.py
src/engram/storage/: __init__.py  chroma.py  embeddings.py  sqlite.py  vault.py
src/memoria/: __init__.py  __main__.py  config.py  constants.py
src/memoria/client/: __init__.py  client.py
src/memoria/engine/: __init__.py  decay.py  ingest.py  recall.py
src/memoria/server/: __init__.py  app.py  mcp_server.py
src/memoria/storage/: __init__.py  chroma.py  embeddings.py  sqlite.py
src/mnemlet/: __init__.py  __main__.py  config.py  constants.py
src/mnemlet/backup/: __init__.py  backup.py  restore.py
tests/: conftest.py  test_api.py  test_backup_restore.py  test_benchmark_adapters.py  test_benchmark_cli.py  test_benchmark_datasets.py  test_benchmark_live.py  test_benchmark_metrics.py  test_benchmark_reports.py  test_benchmark_runner.py  test_briefing_generator.py  test_chroma.py  test_client.py  test_config.py  test_context_api.py  test_conversation_buffer.py  test_conversation_format.py  test_conversation_summarizer.py  test_decay.py  test_embeddings.py  test_explain_trust.py  test_extraction_e2e.py  test_extraction_pipeline.py  test_ingest.py  test_intelligence_classifier_policy.py  test_intelligence_context_pack.py  test_intelligence_review.py  test_intelligence_storage.py  test_intelligence_supersession.py  test_mcp.py  test_mcp_extraction.py  test_memory_extractor.py  test_namespace_policies.py  test_openwebui_filter.py  test_platform_adapters.py  test_quality_benchmark.py  test_recall.py  test_secret_guard.py  test_security_audit.py  test_security_auth.py  (+7 more)
website/: ._index.html  datenschutz.html  impressum.html  index.html
(+74 files in other folders)
