[project]
name = "mnemlet"
version = "0.4.1"
description = "Brain-inspired memory engine for your self-hosted AI stack. Runs on a Pi. Local-first with optional API-key auth."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Christoph Augenstein-Drescher", email = "developer@augenstein.consulting"}
]
keywords = ["memory", "ai", "self-hosted", "local-first", "raspberry-pi", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "chromadb>=0.5.0",
    "onnxruntime>=1.20.0",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "tokenizers>=0.21.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://caugenstein-d.github.io/mnemlet"
Repository = "https://github.com/caugenstein-d/mnemlet"
Documentation = "https://github.com/caugenstein-d/mnemlet#readme"
Issues = "https://github.com/caugenstein-d/mnemlet/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "httpx>=0.28.0",
]

[project.scripts]
mnemlet = "mnemlet.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemlet"]
